--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ project(game VERSION 0.1.0)
 
 include(CTest)
 enable_testing()
+set (CMAKE_CXX_STANDARD 23)
+
 
 file(GLOB_RECURSE helloworld_SRC
      "src/*.hpp"
